Fix header spacing

--- a/basketball-gm.com/assets/main.css
+++ b/basketball-gm.com/assets/main.css
@@ -99,7 +99,6 @@ blockquote p {
   /* Space out the masthead */
   .header {
     border-bottom: 1px solid #e5e5e5;
-    margin-bottom: 30px;
     text-align: left;
   }
   .header .nav {
